# derivasjon

./: .gitignore  README.md
code/: cabal.project  shell.nix
code/derivasjon/: derivasjon.cabal  ghci.conf  index.html
code/derivasjon/derivasjon/: Main.hs
code/derivasjon/src/Derivasjon/: Main.hs
docker/: default.nix
nix/: default.nix  extra-deps.nix  release.nix
nix/nixpkgs/: github.json
