cabal-version:       3.0
name:                derivasjon
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             Unlicense
author:              Erik Rybakken
maintainer:          erikryb@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md

library
  hs-source-dirs:      src
  ghc-options:         -fwarn-unused-binds
                       -O2 
                       -funbox-strict-fields
                       -fdicts-strict 
                       -fspec-constr-recursive=16 
                       -fmax-worker-args=16
                       -F -pgmF requirepp
                       -fwrite-ide-info
                       -fwarn-unused-packages
                       -fwarn-redundant-constraints
                       -fwarn-identities
                       -fwarn-unused-imports
                       -fwarn-incomplete-record-updates
                       -fwarn-missing-home-modules
                       ---fwarn-incomplete-uni-patterns
                       ---fplugin=Fusion.Plugin
                       -fplugin=Splint
                       "-fplugin-opt=Splint:--ignore=Use prev"
                       "-fplugin-opt=Splint:--ignore=Use next"

  default-extensions:
    OverloadedStrings
    LambdaCase
    MultiWayIf
    TupleSections
    RecordWildCards
    PackageImports
    QuasiQuotes
    GADTs
    DeriveGeneric
    DataKinds
    NumDecimals
  exposed-modules:
    Derivasjon.Main
  mixins:
    base hiding (Prelude)
    , relude (Relude as Prelude)
    , relude
  build-depends:
    aeson,
    base,
    random,
    data-fix,
    file-embed,
    http-api-data,
    lucid,
    lucid-htmx,
    recursion-schemes,
    relude,
    require,
    servant,
    servant-fiat-content,
    servant-server,
    servant-lucid,
    servant-htmx,
    splint,
    warp,

executable derivasjon
  main-is:             Main.hs
  ghc-options:         -Wunused-imports 
                       -threaded   
                       -O2 
                       -prof
                       -fprof-auto
                       -funbox-strict-fields
                       -fdicts-strict 
                       -fspec-constr-recursive=16 
                       -fmax-worker-args=16
                       -fwarn-unused-packages
                       ---fplugin=Fusion.Plugin
                       -rtsopts
                       "-with-rtsopts=-I0 -qg"
  other-extensions:    OverloadedStrings, LambdaCase, DeriveGeneric
  build-depends:       
    base,
    derivasjon,
  hs-source-dirs:      derivasjon
  default-language:    Haskell2010
